@@ -7,3 +7,4 @@ V6_add_supported_dialects.sql
 V7_add_contact_reasons.sql
 V8_added_cases_files.sql
 V9_added_cases_files_cases.sql
+V10_added_cases_files_cases_received.sql
